--- a/Decorist/index.html
+++ b/Decorist/index.html
@@ -17,71 +17,14 @@
 			<h1>complete your order</h1>
 			<h2>Making interior design personal, affordable and easy</h2>
 			<nav class="nav">
-				<div class="nav-item active">View Cart</div>
-				<div class="nav-item">Payment</div>
-				<div class="nav-item">Additional Info</div>
+				<div class="nav-item nav-item-cart active">View Cart</div>
+				<div class="nav-item nav-item-payment">Payment</div>
+				<div class="nav-item nav-item-info">Additional Info</div>
 			</nav>
 			<img src="img/photo1.jpg" alt="" class="shopping-photo">
-			<cart></cart>
-			<!-- <div class="shopping-card clear-fix">
-				<h3>Your Shopping Cart</h3>
-				<a href="#" class="shopping-card-continue">Continue shopping</a>
-				<table class="shopping-card-list">
-					<thead>
-						<tr>
-							<td class="shopping-card-list-item">item</td>
-							<td class="shopping-card-list-quantity">quantity</td>
-							<td class="shopping-card-list-price">price</td>
-							<td class="shopping-card-list-change">change</td>
-						</tr>
-					</thead>
-					<tbody>
-						<tr>
-							<td>
-							<img src="img/photo2.png" alt=""><span class="item-name">PERSONAL SHOPPER PACKAGE</span>
-							</td>
-							<td>
-								<button>-</button>
-								<span class="counter">1</span>
-								<button>+</button>
-							</td>
-							<td>$69.00</td>
-							<td>
-								<button class="remove">x</button>
-							</td>
-						</tr>
-					</tbody>
-				</table>
-				<table class="shopping-card-summary">
-					<tfoot>
-						<tr>
-							<td><a href="#">add promo code</a></td>
-							<td>total</td>
-							<td>$69.00</td>
-						</tr>
-					</tfoot>
-					<tbody>
-						<tr>
-							<td></td>
-							<td>subtotal</td>
-							<td>$69.00</td>
-						</tr>
-						<tr>
-							<td></td>
-							<td>tax</td>
-							<td>$0.00</td>
-						</tr>
-						<tr>
-							<td></td>
-							<td>shipping</td>
-							<td>$0.00</td>
-						</tr>
-					</tbody>
-				</table>
-				<a href="#" class="button button-color">next - payment</a>
-				<a href="#" class="button button-transparent">Happiness Guarantee!</a>
-			</div>
-					</div> -->
+
+			<ui-view></ui-view>
+		</div>
 	</main>
 	<footer class="footer clear-fix">
 		<div class="wrap">
@@ -115,5 +58,7 @@
 	<script src="js/lib/angular-ui-router.min.js"></script>
 	<script src="js/app.js"></script>
 	<script src="js/cart.js"></script>
+	<script src="js/payment.js"></script>
+	<script src="js/info.js"></script>
 </body>
 </html>
