New project added

--- a/Decorist/index.html
+++ b/Decorist/index.html
@@ -7,6 +7,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
+	<a href="#/payment">Payment</a>
 	<header class="header clear-fix">
 		<a href="#" class="button button-color">Login</a>
 		<a href="#" class="button button-transparent">Help</a>
