Revision A of Portfolio page

--- a/index.html
+++ b/index.html
@@ -11,22 +11,80 @@
 	<h1>Portfolio</h1>
 	<main class="clearfix">
 		<a href="https://photofactsacademy.nl/gratisproberen" class="portfolio-item portfolio-item-vertical">
-			<img src="img/photofacts.png" alt="">
+			<img src="img/photofacts.png" alt="Photofacts">
+			<div class="hover-grey">
+				<h3>PhotoFacts</h3>
+				<ul>
+					<li>mobile-first responsive design</li>
+					<li>cross-browser (IE10, Chrome, Firefox, Safari)</li>
+					<li>preprocessor SASS</li>
+					<li>Valid HTML and CSS code</li>
+				</ul>
+			</div>
 		</a>
-		<a href="http://rakelo.github.io/Portfolio1/" class="portfolio-item portfolio-item-small">
-			<img src="img/family tree.png" alt="Photofacts">
+		<a href="http://rakelo.github.io/Portfolio1" class="portfolio-item portfolio-item-small">
+			<img src="img/family tree.png" alt="Family Tree">
+			<div class="hover-grey">
+				<h3>FamilyTree</h3>
+				<ul>
+					<li>mobile-first responsive design</li>
+					<li>cross-browser (IE10, Chrome, Firefox, Safari)</li>
+					<li>preprocessor SASS</li>
+					<li>JQuery plugin Mobilyslider</li>
+					<li>Valid HTML and CSS code</li>
+				</ul>
+			</div>
 		</a>
 		<a href="http://rakelo.github.io/Portfolio2" class="portfolio-item portfolio-item-horizontal">
-			<img src="img/swing.png" alt="">
+			<img src="img/swing.png" alt="Swing Dance">
+			<div class="hover-grey">
+				<h3>Swing Dance in Kiev</h3>
+				<ul>
+					<li>Mobile-first responsive design</li>
+					<li>Cross-browser (IE10, Chrome, Firefox, Safari)</li>
+					<li>Preprocessor SASS</li>
+					<li>JQuery plugin Mobilyslider</li>
+					<li>Google Maps API</li>
+					<li>Valid HTML and CSS code</li>
+				</ul>
+			</div>
 		</a>
 		<a href="http://frontendrs.github.io/Decorist" class="portfolio-item portfolio-item-small">
-			<img src="img/decorist.png" alt="">
+			<img src="img/decorist.png" alt="Decorist">
+			<div class="hover-grey">
+				<h3>Decorist</h3>
+				<ul>
+					<li>Cross-browser (IE10, Chrome, Firefox, Safari)</li>
+					<li>Preprocessor SASS</li>
+					<li>AngularJS</li>
+					<li>Valid CSS code</li>
+				</ul>
+			</div>
 		</a>
-		<a href="http://frontendrs.github.io/1+1media" class="portfolio-item portfolio-item-big">
-			<img src="img/1+1media.png" alt="">
+		<a href="http://frontendrs.github.io/1+1media" class="portfolio-item portfolio-item-big item-right">
+			<img src="img/1+1media.png" alt="1+1 media">
+			<div  class="hover-grey">
+				<h3>1+1 Media</h3>
+				<ul>
+					<li>Screen resolution: 1920х1080px</li>
+					<li>Cross-browser (IE10, Chrome, Firefox, Safari)</li>
+					<li>JavaScript (slider)</li>
+					<li>Valid HTML and CSS code</li>
+				</ul>
+			</div>
 		</a>
 		<a href="http://frontendrs.github.io/ITNewsHub" class="portfolio-item portfolio-item-horizontal">
-			<img src="img/IThub.png" alt="">
+			<img src="img/IThub.png" alt="ITNewsHub">
+			<div class="hover-grey">
+				<h3>IT News Hub</h3>
+				<ul>
+					<li>Mobile-first responsive design</li>
+					<li>Cross-browser (IE10, Chrome, Firefox, Safari)</li>
+					<li>Preprocessor SASS</li>
+					<li>JQuery (modal windows)</li>
+					<li>Valid HTML and CSS code</li>
+				</ul>
+			</div>
 		</a>
 	</main>	
 </body>
