--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 </head>
 <body>
 	<h1>Portfolio</h1>
+	<h4>by Sharapaniuk Ievgeniia</h4>
 	<main class="clearfix">
 		<a href="https://photofactsacademy.nl/gratisproberen" class="portfolio-item portfolio-item-vertical">
 			<img src="img/photofacts.png" alt="Photofacts">
